fixed sizes not showing right on product page

--- a/src/templates/shop-product/shop-product-page.module.scss
+++ b/src/templates/shop-product/shop-product-page.module.scss
@@ -162,8 +162,8 @@
 }
 
 .size{
-    width:2rem;
-    height:2rem;
+    min-width:2rem;
+    padding:5px;
     border:1px solid black;
     display:flex;
     align-items: center;
